[tool.poetry]
name = "gym-intro"
version = "0.0.1"
description = "Gymnasium intro code"
authors = ["Eric Robinson"]
license = "MIT"
readme = "README.md"
packages = [{include = "gym_intro"}]

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = {extras = ["toy-text"], version = "^0.29.0"}
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
